typescript/checker/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList1.ts.stderr
error: TS1014
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList1.ts:2:6
  |
2 |    F(...A, B) { }
  |      ^^^

